objects/Incentive_details__c.object
<CustomObject>
    <description>This object takes the input from QQ CPR call and save all the incentive details.</description>
    <fields>
        <fullName>Incentive_amount__c</fullName>
        <description>amount</description>
        <label>Incentive amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Incentive details</relationshipLabel>
        <relationshipName>Incentive_details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>incentive_description__c</fullName>
        <description>description</description>
        <label>incentive description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>incentive_taxes__c</fullName>
        <label>incentive taxes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Incentive details</label>
    <nameField>
        <label>Incentive details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>